<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" 
  android:background="@drawable/fundo"
  android:padding="25dp"
  >
    
<TableRow
     android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    >
      <ImageView
          android:id="@+id/imageView1"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:contentDescription="@string/Dado"
          android:src="@drawable/logo" 
          android:layout_marginLeft="1dp"
          android:layout_gravity="left"
          />
     
 </TableRow>
 
  <TableRow 
      android:layout_gravity="center"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
    
     android:text=""
     android:textAppearance="?android:attr/textAppearanceLarge"    
     android:textColor="@android:color/white">
 </TextView>  
   
 </TableRow>
 
  <TableRow 
      android:layout_gravity="center"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
     android:id="@+id/textView85"
     android:layout_width="wrap_content"
    
     android:text="Informe dados para acessar"
     android:textAppearance="?android:attr/textAppearanceLarge"    
     android:textColor="@android:color/white">
 </TextView>  
   
 </TableRow>
 
<TableRow 
      android:layout_gravity="center"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
     android:id="@+id/textView221"
     android:layout_width="wrap_content"
    
     android:text=""
     android:textAppearance="?android:attr/textAppearanceLarge"    
     android:textColor="@android:color/white">
 </TextView>  
 </TableRow>
 
 <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
     <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:text="@string/empresa"             
      android:textSize="20dp"
      android:textColor="@android:color/white"
      />
 </TableRow>

 <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
     
         <EditText
             android:id="@+id/txtEmpresa"             
             android:inputType="number|text"
             android:singleLine="true"
              android:layout_width="wrap_content"
             android:text="1" />
     </TableRow>

<TableRow 
     android:layout_width="wrap_content"
      android:layout_height="wrap_content">

 <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:text="@string/placa"     
     android:textSize="20dp" 
     android:textColor="@android:color/white"
     />
 </TableRow>

 <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
<EditText
    android:id="@+id/edPlaca"
    android:layout_width="wrap_content"
    android:inputType="number|text"
    android:singleLine="true"
    android:text="1792" >
</EditText>

</TableRow>

<TableRow
     android:layout_width="wrap_content"
      android:layout_height="wrap_content">

 <TextView
     android:id="@+id/textView6"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:text="@string/DT"     
     android:textSize="20dp"      
     android:textColor="@android:color/white"
     />
</TableRow>

 <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
 <EditText
     android:id="@+id/edDT"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:inputType="number|text"
     android:singleLine="true"
     android:text="8865" />
 
</TableRow>



<TableRow
     android:layout_width="wrap_content"
      android:layout_height="wrap_content">    
<TextView
     android:id="@+id/textViewoo"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:text=""
     ></TextView> 
</TableRow>

 <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/confirm" 
        android:background="#fff"  />
</TableRow>
 
</TableLayout> 
